fixed wrapping issues in the navbar and added autoplay section

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ button{
 .search-input{
     height: 30px;
     width: 50vw;
+    min-width: 350px;
 }
 .search-button{
     border: 1px solid black;
@@ -37,7 +38,6 @@ button{
 }
 .sign-in-button{
     display: inline-flex;
-
     border: 1px solid blue;
     align-items: center;
     color: blue;
@@ -48,7 +48,6 @@ button{
 
 
 .floatleft {
-    /* float:left; */
     vertical-align: middle;
 }
 
@@ -57,7 +56,6 @@ button{
 }
 
 .floatright {
-    /* float:right; */
    vertical-align: middle;
 }
 
@@ -74,7 +72,6 @@ button{
 .left-menu{
     display: flex;
     float: left;
-/*    justify-content: center; */
     align-items: center;
 }
 .right-menu{
@@ -101,6 +98,8 @@ main{
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-gap: 15px;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 .left-section{
@@ -116,9 +115,11 @@ aside{
     grid-gap: 10px;
 }
 aside div{
-    display: inline-flex;
+    display: flex;
+    
 
 }
+
 
 .left-section {
   display: grid;
@@ -137,15 +138,36 @@ aside div{
 }
 .profile-icon-section{
     display: grid;
-  grid-column: 1 / span2;
+    grid-column: 1 / span2;
     grid-template-columns: 1fr 1fr 1fr;
 }
-.youtube-subscribe-img{
+#youtube-subscribe-img{
     width: 150px;
     margin: 0px;
+    
+    
+    
 }
 
 .username-subscribe-button{
   align-items: center;      /* new */
-justify-items: center;    /* new */
+  justify-items: center;    /* new */
+ 
+}
+
+#profile-icon-image{
+    
+    
+}
+
+body{
+    min-width: 800px;
+}
+#autoplay-button-section{
+    display: flex;
+    justify-content: space-between;
+}
+#toggle-icon-image{
+    width: 35px;
+    height: 20px;
 }
